fix: subtitle spacing when timestamps are not visible

--- a/resources/sass/Text/TextBlockGroup.scss
+++ b/resources/sass/Text/TextBlockGroup.scss
@@ -39,7 +39,6 @@
             opacity: 0;
             height: 0px;
             padding: 0px !important;
-            margin: 0px !important;
             pointer-events: none;
         }
     }
